# qsar-model-workshop

./: README.md  pyproject.toml
notebooks/: lipophilicity_prediction.ipynb
