[tool.poetry]
name = "qsar-model-workshop"
version = "0.1.0"
description = ""
authors = ["khakimova <aigul03.14@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
rdkit = "^2023.3.2"
jupyter = "^1.0.0"
ipykernel = "^6.23.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
